[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gramix"
version = "0.1.9"
description = "A fast, fully-typed Python framework for building Telegram bots."
authors = [{ name = "riokzy", email = "riokzy.official@gmail.com" }]
license = "MIT"
readme = "README_pypi.md"
requires-python = ">=3.10"
keywords = [
    "telegram", "bot", "framework", "fsm", "finite-state-machine",
    "middleware", "webhooks", "async", "asyncio", "typed", "gramix",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9"]
fastapi = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "black>=23.0", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/riokzy/gramix"
Repository = "https://github.com/riokzy/gramix"
Documentation = "https://github.com/riokzy/gramix#readme"
"Bug Tracker" = "https://github.com/riokzy/gramix/issues"
Changelog = "https://github.com/riokzy/gramix/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["gramix*"]
